Create RoomBuilder and RoomService